[package]
name = "pm_info_back"
version = "0.1.0"
authors = ["hzjsea <hzjsea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["rt", "macros", "rt-multi-thread", "process", "time", "signal"]}
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["client", "http2", "stream", "http1", "runtime"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mac_address = "1.1"
rust-crypto = "0.2.26"
failure = "0.1"
openssl = { version = "0.10", features = ["vendored"]}
log = "*"
env_logger = "*"
hyper-tls = "0.5.0"
rand = "0.8"
hmac = {version = "0.11"}
sha2 = {version = "0.9"}
regex = "1.5"
clap = { version = "2.33"}
syslog = "5"
daemonize = "0.4"
log4rs = "1"

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = true
codegen-units = 1
debug-assertions = false
panic = 'abort'
incremental = false

[profile.release.package."*"]
opt-level = 's'


[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.8"
futures-util = "*"
